add select and insert for workout_classes.html.

--- a/instructors.html
+++ b/instructors.html
@@ -91,7 +91,7 @@
 
     
     <div id="insert">
-        <form id="addInstructor">
+        <form method="POST" id="addInstructor">
             <legend> <strong>Add Instructor</strong></legend>
                 <fieldset>
                     <label>First Name</label> <input type="text" name="f_name">
