--- a/membership_plans.html
+++ b/membership_plans.html
@@ -68,7 +68,7 @@
     </div> <!-- browse -->
 
     <div id="insert">
-        <form id="addMembershipPlan">
+        <form method="POST" id="addMembershipPlan">
             <legend><strong>Add Membership Plan</strong></legend>
             <fieldset>
                 <label>Monthly Fee</label> <input type="number">
