--- a/gyms.html
+++ b/gyms.html
@@ -66,7 +66,7 @@
     </div> <!-- browse -->
 
     <div id="insert">
-        <form id="addGym">
+        <form method="POST" id="addGym">
         <legend> <strong>Add Gym</strong></legend> 
         <fieldset>
             <label> Gym Address</label> <input type="text" name="gym_address">
