--- a/instructors.html
+++ b/instructors.html
@@ -6,7 +6,7 @@
 
 <body>
     <h1>Instructors</h1>
-    [ <a href="members.html">Members</a> | <a href="instructors.html">Instructors</a> | <a href="gyms.html">Gyms</a> | <a href="membership_plans.html">Membership Plans</a> | <a href="workout_class.html">Workout Classes</a>]
+    [ <a href="members.html">Members</a> | <a href="instructors.html">Instructors</a> | <a href="gyms.html">Gyms</a> | <a href="membership_plans.html">Membership Plans</a> | <a href="workout_classes.html">Workout Classes</a>]
 
     <div id="browse">
         <p></p>
