--- a/workout_classes.html
+++ b/workout_classes.html
@@ -7,7 +7,7 @@
 <body>
 <div id="browse">
     <h1>Workout Classes</h1>
-    [ <a href="members.html">Members</a> | <a href="instructors.html">Instructors</a> | <a href="gyms.html">Gyms</a> | <a href="membership_plans.html">Membership Plans</a> | <a href="workout_class.html">Workout Classes</a>]
+    [ <a href="members.html">Members</a> | <a href="instructors.html">Instructors</a> | <a href="gyms.html">Gyms</a> | <a href="membership_plans.html">Membership Plans</a> | <a href="workout_classes.html">Workout Classes</a>]
 
     <p></p>
     <strong>Browse Classes</strong>
