--- a/members.html
+++ b/members.html
@@ -111,6 +111,39 @@
             <input class="btn" type="submit" value="cancel">
     </form>
 </div> <!-- insert-->
+
+<p>&nbsp;</p>
+<div id="update">
+    <form id="updateMember" method="POST">
+        <legend><strong>Update Member</strong></legend>
+        <fieldset class="fields">
+            <label>ID: </label>1
+            <label>First Name</label> <input type="text" name="f_name" value="Andrea">
+            <label>Last Name</label> <input type="text" name="l_name" value="Lopez">
+            <label>Address</label> <input type="text" name="address" value="7104 S Miller Dr., San Pablo, CA 94806">
+            <label>Birthday</label> <input type="text" name="birthday" value="1986-04-20">
+            <label>Membership Plan</label> <select name="membership_plan_id">
+                <option value="1">1</option>
+                <option value="2" selected>2</option> 
+                <option value="3">3</option>
+                <option value="4">4</option>
+            </select>
+            <label>Gym</label> <select name="gym_id">
+                <option value="0">NULL</option>
+                <option value="1">1</option>
+                <option value="2">2</option> 
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+        </fieldset>
+        <input class="btn" type="submit" id="updateMember" value="Update Member">
+        <input class="btn" type="submit" value="cancel">
+    </form>
+</div> <!-- update -->
+
+<p>&nbsp;</p>
+
 </body>
 
 </html>
