add delete form

--- a/gyms.html
+++ b/gyms.html
@@ -93,6 +93,22 @@
             <input class="btn" type="submit" value="cancel">
         </form>
     </div><!-- update -->
+
+    <p>&nbsp;</p>
+    
+    <div id="delete">
+        <form method="POST" id="deleteGym">
+            <legend><strong>Delete Gym</strong></legend>
+            <fieldset class="fields">
+                <p>Are you sure you wish to delete this gym?</p>
+                <input type='hidden' name="gym_id" id="deleteGymID" value="1">
+                <label><strong>ID: </strong></label>1
+                <label><strong>Address: </strong></label> 100 E Jacked St. Swoleville City, CA 91990
+            </fieldset>
+            <input class="btn" type="submit" id="deleteGym" value="Delete Gym">
+            <input class="btn" type="submit" value="cancel">
+        </form>
+    </div><!-- delete -->
     
 </body>
 </html>
