add delete form

--- a/members.html
+++ b/members.html
@@ -144,6 +144,21 @@
 
 <p>&nbsp;</p>
 
+<div id="delete">
+    <form method="POST" id="deleteMember">
+        <legend><strong>Delete Member</strong></legend>
+        <fieldset class="fields">
+            <p>Are you sure you wish to delete this member?</p>
+            <input type="hidden" name="member_id" id="deleteMemberID" value="1">
+            <label><strong>ID: </strong></label>1
+            <label><strong>Name: </strong></label> Andrea Lopez
+        </fieldset>
+        <input class="btn" type="submit" id="deleteMember" value="Delete Member">
+        <input class="btn" type="submit" value="cancel">
+    </form>
+
+</div><!-- delete -->
+
 </body>
 
 </html>
