add dynamic functionality

--- a/members.html
+++ b/members.html
@@ -1,20 +1,59 @@
 <html>
 
 <head>
-<title>People</title>
+<title>Members</title>
 <link href="style.css" rel="stylesheet" type="text/css"/>
+    <script language="JavaScript">
+        function showform(dowhat) {
+            if(dowhat == 'insert') {
+                document.getElementById('browse').style.display = 'none';
+				document.getElementById('insert').style.display = 'block';
+				document.getElementById('update').style.display = 'none';
+				document.getElementById('delete').style.display = 'none';
+            }
+            else if (dowhat == 'update'){
+                document.getElementById('browse').style.display = 'none';
+				document.getElementById('insert').style.display = 'none';
+				document.getElementById('update').style.display = 'block';
+				document.getElementById('delete').style.display = 'none';
+            }
+            else if (dowhat == 'delete') {
+                document.getElementById('browse').style.display = 'none';
+				document.getElementById('insert').style.display = 'none';
+				document.getElementById('update').style.display = 'none';
+				document.getElementById('delete').style.display = 'block';
+            }
+            else if (dowhat == 'all') {
+                document.getElementById('browse').style.display = 'block';
+				document.getElementById('insert').style.display = 'block';
+				document.getElementById('update').style.display = 'block';
+				document.getElementById('delete').style.display = 'block';
+            }
+            else {
+                document.getElementById('browse').style.display = 'block';
+				document.getElementById('insert').style.display = 'none';
+				document.getElementById('update').style.display = 'none';
+				document.getElementById('delete').style.display = 'none';
+            }
+        }
+        function newMember() { showform('insert'); }
+        function updateMember(pid) { showform('update'); }
+        function deleteMember(pid) { showform ('delete'); }
+        function browseMember() { showform ('browse'); }
+        function showAll() { showform ('all'); }
+    </script>
 </head>
 
-<body>
+<body onload="browseMember()">
 <h1>Members</h1>    
 [ <a href="members.html">Members</a> | <a href="instructors.html">Instructors</a> | <a href="gyms.html">Gyms</a> | <a href="membership_plans.html">Membership Plans</a> | <a href="workout_classes.html">Workout Classes</a>]
 
 <div id="browse">
-    <p></p>
+    <p><a href="#" onClick="showAll()">Display all forms</a> </p>
     <strong>Browse Members</strong>
     <table border="1" cellpadding="5">
         <tr>
-            <th><a href="#">New</a></th>
+            <th><a href="#" onClick="newMember()">New</a></th>
             <th></th>
             <th>member_id</th>
             <th>f_name</th>
@@ -25,8 +64,8 @@
             <th>gym_id</th>
         </tr>
         <tr>
-            <td><a href="#">Edit</a></td>
-            <td><a href="#">Delete</a></td>
+            <td><a href="#" onClick="updateMember('this.member_id')">Edit</a></td>
+            <td><a href="#" onClick="deleteMember('this.member_id')">Delete</a></td>
             <td>1</td>
             <td>Andrea</td>
             <td>Lopez</td>
@@ -36,8 +75,8 @@
             <td>NULL</td>
         </tr>
         <tr>
-            <td><a href="#">Edit</a></td>
-            <td><a href="#">Delete</a></td>
+            <td><a href="#" onClick="updateMember('this.member_id')">Edit</a></td>
+            <td><a href="#" onClick="deleteMember('this.member_id')">Delete</a></td>
             <td>2</td>
             <td>Kevin</td>
             <td>Nguyen</td>
@@ -47,8 +86,8 @@
             <td>2</td>
         </tr>
         <tr>
-            <td><a href="#">Edit</a></td>
-            <td><a href="#">Delete</a></td>
+            <td><a href="#" onClick="updateMember('this.member_id')">Edit</a></td>
+            <td><a href="#" onClick="deleteMember('this.member_id')">Delete</a></td>
             <td>3</td>
             <td>Jimothy</td>
             <td>Bernoulli</td>
@@ -58,8 +97,8 @@
             <td>5</td>
         </tr>
         <tr>
-            <td><a href="#">Edit</a></td>
-            <td><a href="#">Delete</a></td>
+            <td><a href="#" onClick="updateMember('this.member_id')">Edit</a></td>
+            <td><a href="#" onClick="deleteMember('this.member_id')">Delete</a></td>
             <td>4</td>
             <td>Donathan</td>
             <td>Oyamada</td>
@@ -69,8 +108,8 @@
             <td>4</td>
         </tr>
         <tr>
-            <td><a href="#">Edit</a></td>
-            <td><a href="#">Delete</a></td>
+            <td><a href="#" onClick="updateMember('this.member_id')">Edit</a></td>
+            <td><a href="#" onClick="deleteMember('this.member_id')">Delete</a></td>
             <td>5</td>
             <td>Kenjamin</td>
             <td>Dyson</td>
@@ -108,7 +147,7 @@
                 </select>
             </fieldset>
             <input class="btn" type="submit" id="addMember" value="Add Member">
-            <input class="btn" type="submit" value="cancel">
+            <input class="btn" type="submit" value="cancel" onClick="browseMember()">
     </form>
 </div> <!-- insert-->
 
@@ -138,7 +177,7 @@
             </select>
         </fieldset>
         <input class="btn" type="submit" id="updateMember" value="Update Member">
-        <input class="btn" type="submit" value="cancel">
+        <input class="btn" type="submit" value="cancel" onClick="browseMember()">
     </form>
 </div> <!-- update -->
 
@@ -154,7 +193,7 @@
             <label><strong>Name: </strong></label> Andrea Lopez
         </fieldset>
         <input class="btn" type="submit" id="deleteMember" value="Delete Member">
-        <input class="btn" type="submit" value="cancel">
+        <input class="btn" type="submit" value="cancel" onClick="browseMember()">
     </form>
 
 </div><!-- delete -->
