--- a/membership_plans.html
+++ b/membership_plans.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Membership_plan</title>
+    <title>Membership Plan</title>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
