--- a/workout_classes.html
+++ b/workout_classes.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>People</title>
+    <title>Workout Classes</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 
