update date/time types in html files

--- a/members.html
+++ b/members.html
@@ -51,7 +51,7 @@
 <div id="browse">
     <p><a href="#" onClick="showAll()">Display all forms</a> </p>
     <strong>Browse Members</strong>
-    <table border="1" cellpadding="5">
+    <table border="1">
         <tr>
             <th><a href="#" onClick="newMember()">New</a></th>
             <th></th>
@@ -130,7 +130,7 @@
                 <label>Last Name</label> <input type="text" name="l_name">
                 <label>Address</label> <input type="text" name="address">
                 <p></p>
-                <label>Birthday</label> <input type="text" name="birthday">
+                <label>Birthday</label> <input type="date" name="birthday">
                 <label>Membership Plan</label> <select name="membership_plan_id">
                     <option value="1">1</option>
                     <option value="2">2</option> 
@@ -160,7 +160,7 @@
             <label>First Name</label> <input type="text" name="f_name" value="Andrea">
             <label>Last Name</label> <input type="text" name="l_name" value="Lopez">
             <label>Address</label> <input type="text" name="address" value="7104 S Miller Dr., San Pablo, CA 94806">
-            <label>Birthday</label> <input type="text" name="birthday" value="1986-04-20">
+            <label>Birthday</label> <input type="date" name="birthday" value="1986-04-20">
             <label>Membership Plan</label> <select name="membership_plan_id">
                 <option value="1">1</option>
                 <option value="2" selected>2</option> 
