--- a/membership_plans.html
+++ b/membership_plans.html
@@ -12,7 +12,7 @@
         <p></p>
         <strong>Browse Membership Plans</strong>
 
-        <table border="1" cellpadding="5">
+        <table border="1">
             <tr>
                 <th><a href="#">New</a></th>
                 <th></th>
