--- a/workout_classes.html
+++ b/workout_classes.html
@@ -11,7 +11,7 @@
 
     <p></p>
     <strong>Browse Classes</strong>
-        <table border="1" cellpadding="5">
+        <table border="1">
             <tr>
                 <th>New</th>
                 <th></th>
@@ -76,7 +76,7 @@
         <legend><strong>Add Workout Class</strong></legend>
         <fieldset class="fields">
             <label> Class Type </label> <input type="text" name="class_type"> 
-            <label> Schedule </label> <input type="text" name="schedule">
+            <label> Schedule </label> <input type="datetime" name="schedule">
             <label> Duration </label> <input type="number" name="duration">
             <label> Instructor </label> <select name="instructor_id">
                 <option value="0"></option>
