--- a/gyms.html
+++ b/gyms.html
@@ -12,7 +12,7 @@
     <div id="browse">
         <p></p>
         <strong>Browse Gyms</strong>
-        <table border="1" cellpadding="5">
+        <table border="1">
             <tr>
                 <th><a href="#">New</a></th>
                 <th></th>
@@ -70,8 +70,8 @@
         <legend> <strong>Add Gym</strong></legend> 
         <fieldset class="fields">
             <label> Gym Address</label> <input type="text" name="gym_address">
-            <label> Opening Time</label> <input type="text" name="opening_time">
-            <label> Closing Time</label> <input type="text" name="closing_time">
+            <label> Opening Time</label> <input type="time" name="opening_time">
+            <label> Closing Time</label> <input type="time" name="closing_time">
         </fieldset>
             <input class="btn" type="submit" id="addGym" value="Add Gym">
             <input class="btn" type="submit" value="cancel">
@@ -86,8 +86,8 @@
             <fieldset class="fields">
                 <label>ID: </label>1
                 <label> Gym Address</label> <input type="text" name="gym_address" value="100 E Jacked St. Swoleville City, CA 91990">
-                <label> Opening Time</label> <input type="text" name="opening_time" value="05:00:00">
-                <label> Closing Time</label> <input type="text" name="closing_time" value="22:00:00">
+                <label> Opening Time</label> <input type="time" name="opening_time" value="05:00:00">
+                <label> Closing Time</label> <input type="time" name="closing_time" value="22:00:00">
             </fieldset>
             <input class="btn" type="submit" id="updateGym" value="Update Gym">
             <input class="btn" type="submit" value="cancel">
