--- a/instructors.html
+++ b/instructors.html
@@ -11,7 +11,7 @@
     <div id="browse">
         <p></p>
         <strong>Browse Instructors</strong>
-        <table border="1" cellpadding="5">
+        <table border ='1'>
             <tr>
                 <th><a href="#">New</a></th>
                 <th></th>
@@ -98,7 +98,7 @@
                     <label>Last Name</label> <input type="text" name="l_name">
                     <label>Address</label> <input type="text" name="address">
                     <p></p>
-                    <label>Birthday</label> <input type="text" name="birthday">
+                    <label>Birthday</label> <input type="date" name="birthday">
                     <label>Email</label> <input type="text" name="email">
                     <label>Phone Number</label> <input type="text" name="phone_number">
                 
@@ -127,7 +127,7 @@
                 <label>Last Name</label> <input type="text" name="l_name" value="Pascal">
                 <label>Address</label> <input type="text" name="address" value="49 Ann St. Alabaster, CA 95007">
                 <p></p>
-                <label>Birthday</label> <input type="text" name="birthday" value="1975-04-02">
+                <label>Birthday</label> <input type="date" name="birthday" value="1975-04-02">
                 <label>Email</label> <input type="text" name="email" value="PascalPedro@hollywood.com">
                 <label>Phone Number</label> <input type="text" name="phone_number" value="213-795-4636">
             
