--- a/gyms.html
+++ b/gyms.html
@@ -7,7 +7,11 @@
 
 <body>
     <h1> Gyms</h1>
-    [ <a href="members.html">Members</a> | <a href="instructors.html">Instructors</a> | <a href="gyms.html">Gyms</a> | <a href="membership_plans.html">Membership Plans</a> | <a href="workout_classes.html">Workout Classes</a>]
+    [ <a href="members.html">Members</a> |
+    <a href="instructors.html">Instructors</a> |
+    <a href="gyms.html">Gyms</a> |
+    <a href="membership_plans.html">Membership Plans</a> |
+    <a href="workout_classes.html">Workout Classes</a>]
 
     <div id="browse">
         <p></p>
@@ -85,9 +89,12 @@
             <legend><strong>Update Gym</strong></legend>
             <fieldset class="fields">
                 <label>ID: </label>1
-                <label> Gym Address</label> <input type="text" name="gym_address" value="100 E Jacked St. Swoleville City, CA 91990">
-                <label> Opening Time</label> <input type="time" name="opening_time" value="05:00:00">
-                <label> Closing Time</label> <input type="time" name="closing_time" value="22:00:00">
+                <label> Gym Address</label>
+                    <input type="text"name="gym_address" value="100 E Jacked St. Swoleville City, CA 91990">
+                <label> Opening Time</label>
+                    <input type="time" name="opening_time" value="05:00:00">
+                <label> Closing Time</label>
+                    <input type="time" name="closing_time" value="22:00:00">
             </fieldset>
             <input class="btn" type="submit" id="updateGym" value="Update Gym">
             <input class="btn" type="submit" value="cancel">
