--- a/membership_plans.html
+++ b/membership_plans.html
@@ -7,7 +7,11 @@
 
 <body>
 <h1> Membership Plans</h1>
-[ <a href="members.html">Members</a> | <a href="instructors.html">Instructors</a> | <a href="gyms.html">Gyms</a> | <a href="membership_plans.html">Membership Plans</a> | <a href="workout_classes.html">Workout Classes</a> ]
+[ <a href="members.html">Members</a> |
+<a href="instructors.html">Instructors</a> |
+<a href="gyms.html">Gyms</a> |
+<a href="membership_plans.html">Membership Plans</a> |
+<a href="workout_classes.html">Workout Classes</a> ]
     <div id="browse">
         <p></p>
         <strong>Browse Membership Plans</strong>
