made NEW a link

--- a/workout_classes.html
+++ b/workout_classes.html
@@ -13,7 +13,7 @@
     <strong>Browse Classes</strong>
         <table border="1">
             <tr>
-                <th>New</th>
+                <th><a href="#">New</a></th>
                 <th></th>
                 <th>workout_class_id</th>
                 <th>class_type</th>
