Format updates to increase readability

--- a/members.html
+++ b/members.html
@@ -46,7 +46,11 @@
 
 <body onload="browseMember()">
 <h1>Members</h1>    
-[ <a href="members.html">Members</a> | <a href="instructors.html">Instructors</a> | <a href="gyms.html">Gyms</a> | <a href="membership_plans.html">Membership Plans</a> | <a href="workout_classes.html">Workout Classes</a>]
+[ <a href="members.html">Members</a> |
+<a href="instructors.html">Instructors</a> |
+<a href="gyms.html">Gyms</a> |
+<a href="membership_plans.html">Membership Plans</a> |
+<a href="workout_classes.html">Workout Classes</a>]
 
 <div id="browse">
     <p><a href="#" onClick="showAll()">Display all forms</a> </p>
