add link to class participant page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <a href="instructors.html">Instructors</a> |
     <a href="gyms.html">Gyms</a> |
     <a href="membership_plans.html">Membership Plans</a> |
-    <a href="workout_classes.html">Workout Classes</a>]
+    <a href="workout_classes.html">Workout Classes</a> |
+    <a href="members_workouts.html">Class Participants</a> | 
+    <a href="members_workouts.html">Class Participants</a>]
 
     <ul>
         <li>Members - Personal/Contact information for gym members</li>
