--- a/membership_plans.html
+++ b/membership_plans.html
@@ -11,7 +11,8 @@
 <a href="instructors.html">Instructors</a> |
 <a href="gyms.html">Gyms</a> |
 <a href="membership_plans.html">Membership Plans</a> |
-<a href="workout_classes.html">Workout Classes</a> ]
+<a href="workout_classes.html">Workout Classes</a> |
+<a href="members_workouts.html">Class Participants</a>]
     <div id="browse">
         <p></p>
         <strong>Browse Membership Plans</strong>
