--- a/members_workouts.html
+++ b/members_workouts.html
@@ -6,7 +6,7 @@
 
     <body>
         <h1>Workout Class Participants</h1>
-        [ <a href="members.html">Members</a> | <a href="instructors.html">Instructors</a> | <a href="gyms.html">Gyms</a> | <a href="membership_plans.html">Membership Plans</a> | <a href="workout_classes.html">Workout Classes</a>]
+        [ <a href="members.html">Members</a> | <a href="instructors.html">Instructors</a> | <a href="gyms.html">Gyms</a> | <a href="membership_plans.html">Membership Plans</a> | <a href="workout_classes.html">Workout Classes</a> | <a href="members_workouts.html">Class Participants</a>]
 
         <div id="browse">
             <p><strong>Browse Members in Class</strong></p>
