--- a/workout_classes.html
+++ b/workout_classes.html
@@ -20,6 +20,7 @@
                 <th>schedule</th>
                 <th>duration</th>
                 <th>instructor_id</th>
+                <th>instructor name</th>
             </tr>
 
             <tr>
@@ -30,6 +31,7 @@
                 <td>2023-03-14 09:00:00</td>
                 <td>60</td>
                 <td>1</td>
+                <td>Pedro</td>
             </tr>
             <tr>
                 <td><a href="#">Edit</a></td>
@@ -39,6 +41,7 @@
                 <td>2023-03-27 07:00:00</td>
                 <td>45</td>
                 <td>2</td>
+                <td>Miley</td>
             </tr>
             <tr>
                 <td><a href="#">Edit</a></td>
@@ -48,6 +51,7 @@
                 <td>2023-03-14 09:00:00</td>
                 <td>60</td>
                 <td>4</td>
+                <td>David</td>
             </tr>
             <tr>
                 <td><a href="#">Edit</a></td>
@@ -57,6 +61,7 @@
                 <td>2023-03-15 07:00:00</td>
                 <td>90</td>
                 <td>3</td>
+                <td>Lee</td>
             </tr>
             <tr>
                 <td><a href="#">Edit</a></td>
@@ -66,6 +71,7 @@
                 <td>2023-03-18 09:00:00</td>
                 <td>90</td>
                 <td>5</td>
+                <td>Rob</td>
             </tr>
         </table>
         <p>&nbsp;</p>
@@ -80,11 +86,11 @@
             <label> Duration </label> <input type="number" name="duration">
             <label> Instructor </label> <select name="instructor_id">
                 <option value="0"></option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
+                <option value="1">Pedro</option>
+                <option value="2">Miley</option>
+                <option value="3">Lee</option>
+                <option value="4">David</option>
+                <option value="5">Rob</option>
             </select> 
         </fieldset>
         <input class="btn" type="submit" id="addWorkoutClass" value="Add Class">
@@ -102,11 +108,11 @@
             <label> Schedule </label> <input type="text" name="schedule" value="2023-03-14 09:00:00">
             <label> Duration </label> <input type="number" name="duration" value="60">
             <label> Instructor </label> <select name="instructor_id">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
+                <option value="1">Pedro</option>
+                <option value="2">Miley</option>
+                <option value="3">Lee</option>
+                <option value="4">David</option>
+                <option value="5">Rob</option>
             </select> 
         </fieldset>
         <input class="btn" type="submit" id="updateWorkoutClass" value="Update Class">
@@ -123,7 +129,7 @@
             <input type="hidden" name="workout_class_id" id="deleteWorkoutClassID" value="1">
             <label><strong>ID: </strong></label>1
             <label><strong>Schedule: </strong></label> 2023-03-14 09:00:00
-            <label><strong>Instructor: </strong></label> 1
+            <label><strong>Instructor: </strong></label> Pedro
         </fieldset>
         <input class="btn" type="submit" id="deleteWorkoutClass" value="Delete Class">
         <input class="btn" type="submit" value="cancel">
