add blank option to update workout class

--- a/workout_classes.html
+++ b/workout_classes.html
@@ -108,6 +108,7 @@
             <label> Schedule </label> <input type="text" name="schedule" value="2023-03-14 09:00:00">
             <label> Duration </label> <input type="number" name="duration" value="60">
             <label> Instructor </label> <select name="instructor_id">
+                <option value="0"></option>
                 <option value="1">Pedro</option>
                 <option value="2">Miley</option>
                 <option value="3">Lee</option>
