Changed title to 'Jimbo's Gym'

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title> Index</title>
+    <title> Jimbo's Gym </title>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
