--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1> Index</h1>
+    <h1> Jimbo's Gym </h1>
     [ <a href="members.html">Members</a> |
     <a href="instructors.html">Instructors</a> |
     <a href="gyms.html">Gyms</a> |
