--- a/members.html
+++ b/members.html
@@ -49,9 +49,9 @@
 [ <a href="members.html">Members</a> |
 <a href="instructors.html">Instructors</a> |
 <a href="gyms.html">Gyms</a> |
-<a href="membership_plans.html">Membership Plans</a> |
+<a href="plans.html">Membership Plans</a> |
 <a href="workout_classes.html">Workout Classes</a> |
-<a href="members_workouts.html">Class Participants</a>]
+<a href="classes.html">Class Participants</a>]
 
 <div id="browse">
     <p><a href="#" onClick="showAll()">Display all forms</a> </p>
