Update hyperlink locations

--- a/members.html
+++ b/members.html
@@ -50,8 +50,8 @@
 <a href="instructors.html">Instructors</a> |
 <a href="gyms.html">Gyms</a> |
 <a href="plans.html">Membership Plans</a> |
-<a href="workout_classes.html">Workout Classes</a> |
-<a href="classes.html">Class Participants</a>]
+<a href="classes.html">Classes</a> | 
+<a href="members_classes.html">Class Participants</a>]
 
 <div id="browse">
     <p><a href="#" onClick="showAll()">Display all forms</a> </p>
