--- a/classes.html
+++ b/classes.html
@@ -7,11 +7,11 @@
 <body>
 <div id="browse">
     <h1>Workout Classes</h1>
-    [ <a href="members.html">Members</a> | 
-    <a href="instructors.html">Instructors</a> | 
-    <a href="gyms.html">Gyms</a> | 
-    <a href="plans.html">Membership Plans</a> | 
-    <a href="classes.html">Workout Classes</a> | 
+    [ <a href="members.html">Members</a> |
+    <a href="instructors.html">Instructors</a> |
+    <a href="gyms.html">Gyms</a> |
+    <a href="plans.html">Membership Plans</a> |
+    <a href="classes.html">Classes</a> | 
     <a href="members_classes.html">Class Participants</a>]
 
     <p></p>
