--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <a href="instructors.html">Instructors</a> |
     <a href="gyms.html">Gyms</a> |
     <a href="plans.html">Membership Plans</a> |
-    <a href="workout_classes.html">Workout Classes</a> | 
-    <a href="classes.html">Class Participants</a>]
+    <a href="classes.html">Classes</a> | 
+    <a href="members_classes.html">Class Participants</a>]
 
     <ul>
         <li>Members - Personal/Contact information for gym members</li>
