--- a/members_classes.html
+++ b/members_classes.html
@@ -6,12 +6,12 @@
 
     <body>
         <h1>Workout Class Participants</h1>
-        [ <a href="members.html">Members</a> | 
-        <a href="instructors.html">Instructors</a> | 
-        <a href="gyms.html">Gyms</a> | 
-        <a href="plans.html">Membership Plans</a> | 
-        <a href="workout_classes.html">Workout Classes</a> | 
-        <a href="classes.html">Class Participants</a>]
+        [ <a href="members.html">Members</a> |
+        <a href="instructors.html">Instructors</a> |
+        <a href="gyms.html">Gyms</a> |
+        <a href="plans.html">Membership Plans</a> |
+        <a href="classes.html">Classes</a> | 
+        <a href="members_classes.html">Class Participants</a>]
 
         <div id="browse">
             <p><strong>Browse Members in Class</strong></p>
