--- a/classes.html
+++ b/classes.html
@@ -6,7 +6,7 @@
 
 <body>
 <div id="browse">
-    <h1>Workout Classes</h1>
+    <h1>Classes</h1>
     [ <a href="members.html">Members</a> |
     <a href="instructors.html">Instructors</a> |
     <a href="gyms.html">Gyms</a> |
