Renamed header for browse section. Change resulting select query in DML.sql

--- a/members_classes.html
+++ b/members_classes.html
@@ -19,12 +19,12 @@
                 <tr>
                     <th><a href="#">New</a></th>
                     <th></th>
-                    <th>member_workout_id</th>
-                    <th>workout_class_id</th>
-                    <th>class_type</th>
-                    <th>schedule</th>
-                    <th>member_id</th>
-                    <th>member_name</th>
+                    <th>Class Participant ID</th>
+                    <th>Class ID</th>
+                    <th>Class Type</th>
+                    <th>Schedule</th>
+                    <th>Member ID</th>
+                    <th>Member Name</th>
                 </tr>
                 <tr>
                     <td><a href=#>Edit</a></td>
