--- a/classes.html
+++ b/classes.html
@@ -20,12 +20,12 @@
             <tr>
                 <th><a href="#">New</a></th>
                 <th></th>
-                <th>workout_class_id</th>
-                <th>class_type</th>
-                <th>schedule</th>
-                <th>duration</th>
-                <th>instructor_id</th>
-                <th>instructor name</th>
+                <th>Class ID</th>
+                <th>Class Type</th>
+                <th>Schedule</th>
+                <th>Duration</th>
+                <th>Instructor ID</th>
+                <th>Instructor Name</th>
             </tr>
 
             <tr>
@@ -36,7 +36,7 @@
                 <td>2023-03-14 09:00:00</td>
                 <td>60</td>
                 <td>1</td>
-                <td>Pedro</td>
+                <td>Pedro Pascal</td>
             </tr>
             <tr>
                 <td><a href="#">Edit</a></td>
@@ -46,7 +46,7 @@
                 <td>2023-03-27 07:00:00</td>
                 <td>45</td>
                 <td>2</td>
-                <td>Miley</td>
+                <td>Miley Kunis</td>
             </tr>
             <tr>
                 <td><a href="#">Edit</a></td>
@@ -56,7 +56,7 @@
                 <td>2023-03-14 09:00:00</td>
                 <td>60</td>
                 <td>4</td>
-                <td>David</td>
+                <td>David Mitchell</td>
             </tr>
             <tr>
                 <td><a href="#">Edit</a></td>
@@ -66,7 +66,7 @@
                 <td>2023-03-15 07:00:00</td>
                 <td>90</td>
                 <td>3</td>
-                <td>Lee</td>
+                <td>Lee Mack</td>
             </tr>
             <tr>
                 <td><a href="#">Edit</a></td>
@@ -76,7 +76,7 @@
                 <td>2023-03-18 09:00:00</td>
                 <td>90</td>
                 <td>5</td>
-                <td>Rob</td>
+                <td>Rob Brydon</td>
             </tr>
         </table>
         <p>&nbsp;</p>
