change members_classes to class_participants

--- a/plans.html
+++ b/plans.html
@@ -12,7 +12,7 @@
 <a href="gyms.html">Gyms</a> |
 <a href="plans.html">Membership Plans</a> |
 <a href="classes.html">Classes</a> | 
-<a href="members_classes.html">Class Participants</a>]
+<a href="class_participants.html">Class Participants</a>]
     <div id="browse">
         <p></p>
         <strong>Browse Membership Plans</strong>
