--- a/classes.html
+++ b/classes.html
@@ -12,11 +12,11 @@
     <a href="gyms.html">Gyms</a> |
     <a href="plans.html">Membership Plans</a> |
     <a href="classes.html">Classes</a> | 
-    <a href="members_classes.html">Class Participants</a>]
+    <a href="class_participants.html">Class Participants</a>]
 
     <p></p>
     <strong>Browse Classes</strong>
-        <table border="1">
+        <table border="1" cellpadding="4">
             <tr>
                 <th><a href="#">New</a></th>
                 <th></th>
