--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="gyms.html">Gyms</a> |
     <a href="plans.html">Membership Plans</a> |
     <a href="classes.html">Classes</a> | 
-    <a href="members_classes.html">Class Participants</a>]
+    <a href="class_participants.html">Class Participants</a>]
 
     <ul>
         <li>Members - Personal/Contact information for gym members</li>
