--- a/class_participants.html
+++ b/class_participants.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        <title>Workout Class Participants</title>
+        <title>Class Participants</title>
         <link href="style.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <body>
-        <h1>Workout Class Participants</h1>
+        <h1>Class Participants</h1>
         [ <a href="members.html">Members</a> |
         <a href="instructors.html">Instructors</a> |
         <a href="gyms.html">Gyms</a> |
