Change browse header for more readability

--- a/gyms.html
+++ b/gyms.html
@@ -17,14 +17,14 @@
     <div id="browse">
         <p></p>
         <strong>Browse Gyms</strong>
-        <table border="1">
+        <table border="1" cellpadding="4">
             <tr>
                 <th><a href="#">New</a></th>
                 <th></th>
-                <th>gym_id</th>
-                <th>gym_address</th>
-                <th>opening_time</th>
-                <th>closing_time</th>
+                <th>Gym ID</th>
+                <th>Address</th>
+                <th>OPENS</th>
+                <th>CLOSES</th>
             </tr>
             <tr>
                 <td><a href="#">Edit</a></td>
