--- a/members.html
+++ b/members.html
@@ -56,17 +56,17 @@
 <div id="browse">
     <p><a href="#" onClick="showAll()">Display all forms</a> </p>
     <strong>Browse Members</strong>
-    <table border="1">
+    <table border="1" cellpadding="4">
         <tr>
             <th><a href="#" onClick="newMember()">New</a></th>
             <th></th>
-            <th>member_id</th>
-            <th>f_name</th>
-            <th>l_name</th>
-            <th>address</th>
-            <th>birthday</th>
-            <th>membership_plan_id</th>
-            <th>gym_id</th>
+            <th>Member ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Address</th>
+            <th>Birthday</th>
+            <th>Membership Plan ID</th>
+            <th>Gym ID</th>
         </tr>
         <tr>
             <td><a href="#" onClick="updateMember('this.member_id')">Edit</a></td>
