Update "browse" table header-text

--- a/instructors.html
+++ b/instructors.html
@@ -16,18 +16,18 @@
     <div id="browse">
         <p></p>
         <strong>Browse Instructors</strong>
-        <table border ='1'>
+        <table border ='1' cellpadding="4">
             <tr>
                 <th><a href="#">New</a></th>
                 <th></th>
-                <th>instructor_id</th>
-                <th>f_name</th>
-                <th>l_name</th>
-                <th>address</th>
-                <th>birthday</th>
-                <th>email</th>
-                <th>phone_number</th>
-                <th>gym_id</th>
+                <th>Instructor ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Address</th>
+                <th>Birthday</th>
+                <th>Email</th>
+                <th>Phone Number</th>
+                <th>Gym ID</th>
             </tr>
             <tr>
                 <td><a href="#">Edit</a></td>
