Update "browse" table header-text for plans

--- a/plans.html
+++ b/plans.html
@@ -17,16 +17,16 @@
         <p></p>
         <strong>Browse Membership Plans</strong>
 
-        <table border="1">
+        <table border="1" cellpadding="4">
             <tr>
                 <th><a href="#">New</a></th>
                 <th></th>
-                <th>membership_plan_id</th>
-                <th>monthly_fee</th>
-                <th>weight_cardio</th>
-                <th>spa_room</th>
-                <th>lap_pool</th>
-                <th>ballcourt</th>
+                <th>Membership Plan ID</th>
+                <th>Monthly Fee</th>
+                <th>Weights/Cardio</th>
+                <th>Spa Room</th>
+                <th>Lap Pool</th>
+                <th>Ball Court</th>
             </tr>
             <tr>
                 <td><a href="#">Edit</a></td>
