Update table header <p> format

--- a/class_participants.html
+++ b/class_participants.html
@@ -14,7 +14,8 @@
         <a href="class_participants.html">Class Participants</a>]
 
         <div id="browse">
-            <p><strong>Browse Members in Class</strong></p>
+        <p></p>
+        <strong>Browse Members in Class</strong>
             <table border="1">
                 <tr>
                     <th><a href="#">New</a></th>
