--- a/class_participants.html
+++ b/class_participants.html
@@ -16,7 +16,7 @@
         <div id="browse">
         <p></p>
         <strong>Browse Members in Class</strong>
-            <table border="1">
+            <table border="1" cellpadding="4">
                 <tr>
                     <th><a href="#">New</a></th>
                     <th></th>
