Add alias for select queries

--- a/plans.html
+++ b/plans.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Membership Plan</title>
+    <title>Membership Plans</title>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
