--- a/classes.html
+++ b/classes.html
@@ -6,7 +6,8 @@
 
 <body>
     <h1>Classes</h1>
-    [ <a href="members.html">Members</a> |
+    [ <a href="index.html">Home</a> |
+    <a href="members.html">Members</a> |
     <a href="instructors.html">Instructors</a> |
     <a href="gyms.html">Gyms</a> |
     <a href="plans.html">Membership Plans</a> |
