--- a/members.html
+++ b/members.html
@@ -46,7 +46,8 @@
 
 <body onload="browseMember()">
 <h1>Members</h1>    
-[ <a href="members.html">Members</a> |
+[ <a href="index.html">Home</a> |
+<a href="members.html">Members</a> |
 <a href="instructors.html">Instructors</a> |
 <a href="gyms.html">Gyms</a> |
 <a href="plans.html">Membership Plans</a> |
