Combine schedule dropdown menu with Class Type

--- a/class_participants.html
+++ b/class_participants.html
@@ -86,13 +86,9 @@
             <form method="POST" id="addMember_workout">
                 <legend> Add Class and Members </legend>
                 <fieldset class="fields">
-                    <label>Class Type</label> <select name="class_type">
-                        <option>Yoga</option>
-                        <option>HIIT</option>
-                    </select>
-                    <label>Schedule</label> <select name="schedule">
-                        <option>2023-03-27 07:00:00</option>
-                        <option>2023-03-14 09:00:00</option>
+                    <label>Class Type & Schedule</label> <select name="class_type">
+                        <option>Yoga 2023-03-27 07:00:00</option>
+                        <option>HIIT 2023-03-14 09:00:00</option>
                     </select>
                     <label>Member Name</label> <select name="f_name">
                         <option value="0"></option>
